--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(is_valid)
 export(lighttpd_version_history)
 export(mongodb_version_history)
 export(nginx_version_history)
+export(openresty_version_history)
 export(sendmail_version_history)
 import(semver)
 importFrom(Rcpp,sourceCpp)
@@ -16,6 +17,8 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(gh,gh)
+importFrom(gh,gh_next)
 importFrom(lubridate,mdy)
 importFrom(lubridate,mdy_hms)
 importFrom(lubridate,year)
@@ -24,6 +27,7 @@ importFrom(purrr,discard)
 importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,map_df)
+importFrom(purrr,safely)
 importFrom(readr,read_lines)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_text)
@@ -34,7 +38,9 @@ importFrom(stringi,stri_extract_first_regex)
 importFrom(stringi,stri_match_first_regex)
 importFrom(stringi,stri_replace_all_regex)
 importFrom(stringi,stri_replace_first_fixed)
+importFrom(stringi,stri_replace_first_regex)
 importFrom(stringi,stri_sub)
+importFrom(tidyr,separate)
 importFrom(utils,globalVariables)
 importFrom(xml2,read_html)
 importFrom(xml2,read_xml)
