--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(apache_httpd_version_history)
 export(is_valid)
 export(lighttpd_version_history)
 export(mongodb_version_history)
+export(mysql_version_history)
 export(nginx_version_history)
 export(openresty_version_history)
 export(sendmail_version_history)
@@ -15,10 +16,15 @@ importFrom(dplyr,as_data_frame)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_at)
+importFrom(dplyr,progress_estimated)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(gh,gh)
 importFrom(gh,gh_next)
+importFrom(httr,GET)
+importFrom(httr,content)
+importFrom(httr,user_agent)
 importFrom(lubridate,mdy)
 importFrom(lubridate,mdy_hms)
 importFrom(lubridate,year)
