--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(mysql_version_history)
 export(nginx_version_history)
 export(openresty_version_history)
 export(sendmail_version_history)
+export(sqlite_version_history)
 import(semver)
 importFrom(Rcpp,sourceCpp)
 importFrom(curl,curl)
@@ -34,6 +35,7 @@ importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,map_df)
 importFrom(purrr,safely)
+importFrom(purrr,set_names)
 importFrom(readr,read_lines)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_text)
@@ -42,10 +44,13 @@ importFrom(stringi,stri_detect_fixed)
 importFrom(stringi,stri_detect_regex)
 importFrom(stringi,stri_extract_first_regex)
 importFrom(stringi,stri_match_first_regex)
+importFrom(stringi,stri_replace_all_fixed)
 importFrom(stringi,stri_replace_all_regex)
 importFrom(stringi,stri_replace_first_fixed)
 importFrom(stringi,stri_replace_first_regex)
+importFrom(stringi,stri_split_fixed)
 importFrom(stringi,stri_sub)
+importFrom(stringi,stri_trans_tolower)
 importFrom(tidyr,separate)
 importFrom(utils,globalVariables)
 importFrom(xml2,read_html)
