--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(mongodb_version_history)
 export(mysql_version_history)
 export(nginx_version_history)
 export(openresty_version_history)
+export(openssh_version_history)
 export(sendmail_version_history)
 export(sqlite_version_history)
 import(semver)
@@ -40,6 +41,7 @@ importFrom(readr,read_lines)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_text)
 importFrom(rvest,xml_nodes)
+importFrom(stringi,stri_count_fixed)
 importFrom(stringi,stri_detect_fixed)
 importFrom(stringi,stri_detect_regex)
 importFrom(stringi,stri_extract_first_regex)
