--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(apache_httpd_version_history)
 export(is_valid)
 export(lighttpd_version_history)
+export(memcached_version_history)
 export(mongodb_version_history)
 export(mysql_version_history)
 export(nginx_version_history)
@@ -24,11 +25,14 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(gh,gh)
 importFrom(gh,gh_next)
+importFrom(git2r,clone)
+importFrom(git2r,cred_ssh_key)
 importFrom(httr,GET)
 importFrom(httr,content)
 importFrom(httr,user_agent)
 importFrom(lubridate,mdy)
 importFrom(lubridate,mdy_hms)
+importFrom(lubridate,parse_date_time)
 importFrom(lubridate,year)
 importFrom(purrr,"%>%")
 importFrom(purrr,discard)
@@ -53,6 +57,7 @@ importFrom(stringi,stri_replace_first_regex)
 importFrom(stringi,stri_split_fixed)
 importFrom(stringi,stri_sub)
 importFrom(stringi,stri_trans_tolower)
+importFrom(stringi,stri_trim_both)
 importFrom(tidyr,separate)
 importFrom(utils,globalVariables)
 importFrom(xml2,read_html)
