--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,14 @@ export(openresty_version_history)
 export(openssh_version_history)
 export(sendmail_version_history)
 export(sqlite_version_history)
+export(tomcat_version_history)
 import(semver)
 importFrom(Rcpp,sourceCpp)
 importFrom(curl,curl)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_data_frame)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,data_frame)
 importFrom(dplyr,distinct)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
