Support for PHP

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(mysql_version_history)
 export(nginx_version_history)
 export(openresty_version_history)
 export(openssh_version_history)
+export(php_version_history)
 export(sendmail_version_history)
 export(sqlite_version_history)
 export(tomcat_version_history)
