--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(complete_semver)
 export(etcd_version_history)
 export(google_chrome_version_history)
 export(is_valid_semver)
+export(isc_bind_version_history)
 export(lighttpd_version_history)
 export(memcached_version_history)
 export(mongodb_version_history)
@@ -63,6 +64,8 @@ importFrom(stringi,stri_replace_all_fixed)
 importFrom(stringi,stri_replace_all_regex)
 importFrom(stringi,stri_replace_first_fixed)
 importFrom(stringi,stri_replace_first_regex)
+importFrom(stringi,stri_replace_last_fixed)
+importFrom(stringi,stri_replace_last_regex)
 importFrom(stringi,stri_split_fixed)
 importFrom(stringi,stri_sub)
 importFrom(stringi,stri_trans_tolower)
