--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,7 @@ import(semver)
 importFrom(Rcpp,sourceCpp)
 importFrom(curl,curl)
 importFrom(dplyr,arrange)
-importFrom(dplyr,as_data_frame)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,data_frame)
 importFrom(dplyr,distinct)
@@ -67,6 +67,7 @@ importFrom(stringi,stri_replace_first_regex)
 importFrom(stringi,stri_replace_last_fixed)
 importFrom(stringi,stri_replace_last_regex)
 importFrom(stringi,stri_split_fixed)
+importFrom(stringi,stri_split_lines)
 importFrom(stringi,stri_sub)
 importFrom(stringi,stri_trans_tolower)
 importFrom(stringi,stri_trim_both)
