--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,14 +18,14 @@ License: MIT + file LICENSE
 Suggests:
     testthat,
     covr,
-    tibble (>= 2.0.1)
+    tibble
 Depends:
     R (>= 3.2.0)
 Imports:
     purrr,
     rvest,
     readr,
-    dplyr (>= 0.7.8),
+    dplyr,
     stringi,
     semver,
     lubridate,
