--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(apache_httpd_version_history)
 export(apple_ios_version_history)
 export(complete_semver)
 export(etcd_version_history)
+export(exim_version_history)
 export(google_chrome_version_history)
 export(is_valid_semver)
 export(isc_bind_version_history)
@@ -26,6 +27,7 @@ importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,data_frame)
 importFrom(dplyr,distinct)
+importFrom(dplyr,everything)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
