fixups for scrapers; added cache/refresh for mysql and etcd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ importFrom(dplyr,mutate_at)
 importFrom(dplyr,progress_estimated)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,tibble)
 importFrom(gh,gh)
 importFrom(gh,gh_next)
 importFrom(git2r,clone)
