--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(apache_httpd_version_history)
 export(apple_ios_version_history)
+export(citrix_netscaler_version_history)
 export(complete_semver)
 export(etcd_version_history)
 export(exim_version_history)
@@ -19,6 +20,7 @@ export(php_version_history)
 export(sendmail_version_history)
 export(sqlite_version_history)
 export(tomcat_version_history)
+export(virtualbox_version_history)
 import(semver)
 importFrom(Rcpp,sourceCpp)
 importFrom(curl,curl)
